--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ li a:hover {
     text-decoration: none;
 }
 
-.menu {
+.menu-list-item {
   display: none;
 }
 
@@ -128,19 +128,22 @@ span {
 }
 
 
+/* Navigation Bar */
 
 @media only screen and (max-width: 925px) {
   .nav-bar {
-    overflow: hidden;
+    position: fixed;
+    top: 0;
+    display: flex;
+    width: 100%;
+    height: 45px;
+    justify-content: center;
+    align-items: center;
     background-color: #2B2B2B;
     opacity: 0.95;
   }
 
-  .hidden {
-    display: none;
-  }
-
-  li a {
+  .menu-list-item {
     display: block;
     font-size: 0.8rem;
     color: #cac8c8;
@@ -148,11 +151,15 @@ span {
     padding: 1.5em;
   }
 
-  .menu {
-    background-color: #2B2B2B;
-    display: block;
-    position: absolute;
-    right: 45%;
-    top: 0;
+  .menu-list-item:hover {
+    color: #E7E7E7;
+    text-decoration: none;
   }
+
+  .nav {
+    display: none;
+  }   
 }
+
+
+  
